tests/error/inout_errors/barrier_drop.err
Error: Drop violation (at $FILE:14:11)
   | 
12 | @no_type_check
13 | def main() -> None:
14 |    barrier(qubit())
   |            ^^^^^^^ Value with non-droppable type `qubit` would be leaked after
   |                    the function returns

Help: Consider assigning the value to a local variable before passing it to the
function

Guppy compilation failed due to 1 previous error
